@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="AnalyzerTests.cs" />
     <Compile Include="ContainerRegisteredServiceContainerAnalyzerTests.cs" />
+    <Compile Include="DisposableTransientComponentsTests.cs" />
     <Compile Include="ExternalProducerCreationAnalysisTests.cs" />
     <Compile Include="ContainerDebugViewTests.cs" />
     <Compile Include="CustomLifestyleTests.cs" />
