@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013 Simple Injector Contributors
+ * Copyright (c) 2013-2014 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -22,6 +22,8 @@
 
 namespace SimpleInjector.Diagnostics
 {
+    using System;
+
     /// <summary>
     /// Specifies the list of diagnostic types that are currently supported by the diagnostic 
     /// <see cref="Analyzer"/>. Note that new diagnostic types might be added in future versions.
@@ -66,6 +68,13 @@ namespace SimpleInjector.Diagnostics
         /// lifestyle, which might cause multiple instances to be created during the lifespan of that lifestyle.
         /// For more information, see: https://simpleinjector.org/diatl.
         /// </summary>
-        TornLifestyle
+        TornLifestyle,
+
+        /// <summary>
+        /// Diagnostic type that warns when a component is registered as transient, while implementing
+        /// <see cref="IDisposable"/>.
+        /// For more information, see: https://simpleinjector.org/diadt.
+        /// </summary>
+        DisposableTransientComponent,
     }
 }
